--- a/src/app/component/product-form/product-form.component.html
+++ b/src/app/component/product-form/product-form.component.html
@@ -2,10 +2,10 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Новый товар</h5>
+        <h5 class="modal-title">{{!!productToBeUpdated ? 'Редактировать товар' : 'Новый товар'}}</h5>
       </div>
       <div class="modal-body">
-        <form [formGroup]="productForm" novalidate >
+        <form [formGroup]="productForm" novalidate>
           <div class="mb-3">
             <label for="name" class="col-form-label">Имя товара:</label>
             <input type="text" class="form-control"
@@ -55,7 +55,8 @@
       <div class="modal-footer">
         <button type="submit" class="btn btn-primary"
                 (click)="onSaveClick()"
-                [disabled]="productForm?.invalid">Сохранит</button>
+                [disabled]="productForm?.invalid">Сохранит
+        </button>
       </div>
     </div>
   </div>
